<resources>
    <string name="app_name">FitLog</string>
    <string name="tv_menu">メニューの追加</string>
    <string-array name="lv_menu">
        <item>腕立て伏せ</item>
        <item>腹筋</item>
        <item>背筋</item>
        <item>スクワット</item>
        <item>デッドリフト</item>
        <item>ベンチプレス</item>
    </string-array>
    <string name="tv_date">日付</string>
    <string name="bt_date">日付を選択</string>
    <string name="tv_weight">重さ</string>
    <string name="tv_weight_unit">kg</string>
    <string name="tv_rep">回数</string>
    <string name="tv_rep_unit">回</string>
    <string name="tv_set">セット数</string>
    <string name="tv_set_unit">セット</string>
    <string name="bt_save">保存</string>
    <string name="msg_addedFitLog">追加しました！</string>
    <string name="tv_data_list">日付の一覧</string>
</resources>